# flask_tutorial

./: config.py  pyproject.toml
src/: routes.py
src/templates/: index.html
