[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["erayozer17 <eray.ozer.91@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
flask = "^1.1.1"
python-dotenv = "^0.10.5"
flask-wtf = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
